[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entity/Player/PlayerDetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Item/DropDetectionZone.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[sub_resource type="CircleShape2D" id=2]
radius = 1.0

[node name="Drop" type="Node2D"]
script = ExtResource( 2 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 1 )

[node name="PickUpDetectionZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpDetectionZone"]
shape = SubResource( 2 )
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="body_entered" from="PickUpDetectionZone" to="." method="_on_PickUpDetectionZone_body_entered"]

[editable path="PlayerDetectionZone"]
